fix: update docker file